fixed layout broken on small devices

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+  min-height: 100%;
+}
+
+main{
+  min-height: 100vh;
 }
 
 .logo {
